board-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-session-master        # [중요] redisson.conf의 주소와 일치해야 함
  namespace: aws-study-board        # 사용 중인 네임스페이스
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
